# Thorium_Molten_Salt_Reactor

./: .gitignore  AGENTS.md  LICENSE  README.md  docker-compose.openmc.yml  docker-compose.yml  environment-openmc-linux.yml  environment.yml  pyproject.toml
archive/legacy_openmc_2022/: README.md
benchmarks/msre_first_criticality/: benchmark.yaml
benchmarks/msre_u233_zero_power/: benchmark.yaml
benchmarks/msre_zero_power_physics/: benchmark.yaml
benchmarks/tmsr_lf1/: benchmark.yaml  notes.md
docker/: app-runner.Dockerfile  moltres-runner.Dockerfile  openmc-runner.Dockerfile  saltproc-runner.Dockerfile  thermochimica-runner.Dockerfile
docs/: browser-front-end.md  current-model-equations.md  openmsr-review.md  reactor-taxonomy-and-flagship.md  recent-msr-simulation-literature.md  thermal-hydraulics-modeling-strategy.md
example/: fuel_pin.py  materials.xml
fuel_cell/: materials.xml  particle_1_1669.h5  particle_1_170.h5  particle_1_254.h5  particle_1_337.h5  particle_1_4170.h5  particle_1_4171.h5  particle_1_420.h5  particle_1_5004.h5  particle_1_503.h5  particle_1_504.h5  particle_1_586.h5  particle_1_587.h5  particle_1_6.h5  particle_1_6669.h5  particle_1_6671.h5  particle_1_6675.h5  particle_1_6678.h5  particle_1_6679.h5  particle_1_753.h5  particle_1_835.h5  particle_1_836.h5  particle_1_837.h5  particle_1_838.h5  particle_1_86.h5  particle_1_9168.h5  run_reac.py  settings.xml  statepoint.11.h5  summary.h5
scripts/: Build-Web-UI.cmd  Build-Web-UI.ps1  Enter-PytbknShell.cmd  Enter-PytbknShell.ps1  Run-Reactor.cmd  Run-Reactor.ps1  Run-Tests.cmd  Run-Tests.ps1  Run-Web.cmd  Run-Web.ps1
tests/: test_accelerators.py  test_benchmarking.py  test_bop.py  test_bundle_snapshots.py  test_cli.py  test_config_and_build.py  test_container_workflow.py  test_economics.py  test_flow.py  test_geometry.py  test_gpu_viability_experiments.py  test_literature_models.py  test_paths.py  test_physics_core.py  test_plots.py  test_precursors.py  test_reporting.py  test_runtime_benchmark.py  test_transient.py  test_transient_sweep.py  test_web_backend.py  test_web_defaults.py  test_workflow_capabilities.py
(+116 files in other folders)
